--- a/src/components/cards/ToolCard.module.css
+++ b/src/components/cards/ToolCard.module.css
@@ -35,8 +35,7 @@
   }
 
   img {
-    width: 100%;
-    max-width: 220px;
+    max-width: 100%;
     height: auto;
   }
 
@@ -46,7 +45,18 @@
     width: 100%;
 
     img {
-      width: 120px;
+      width: 7.5rem;
+    }
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 1rem;
+    gap: 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+
+    img {
+      width: 5.5rem;
     }
   }
 }
@@ -57,11 +67,45 @@
   width: 100%;
 
   img {
-    width: 120px;
+    width: 7.5rem;
+    height: auto;
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 1rem;
+    gap: 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+
+    img {
+      width: 5.5rem;
+    }
+  }
+}
+
+.content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.title {
+  font-weight: 700;
+  color: var(--neutral-80);
+  font-size: 1.5rem;
+  line-height: 2rem;
+  margin-bottom: 0.5rem;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+    margin-bottom: 0;
   }
 }
 
 .link {
+  margin-top: 0.5rem;
   color: var(--primary-50);
   font-size: 0.6875rem;
   font-weight: 500;
@@ -70,4 +114,8 @@
   text-transform: uppercase;
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 29.875rem) {
+    margin-top: 0.25rem;
+  }
 }
