--- a/src/components/home/Equivalent.module.css
+++ b/src/components/home/Equivalent.module.css
@@ -5,6 +5,11 @@
   border: 2px solid var(--neutral-20);
   background: var(--neutral-00);
   padding: 1.25rem 2rem;
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 0.75rem 1rem;
+    min-height: 6.25rem;
+  }
 }
 
 .empty {
@@ -16,6 +21,13 @@
   gap: 2rem;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 0.25rem;
+
+  @media screen and (max-width: 29.875rem) {
+    img {
+      height: 3.75rem;
+    }
+  }
 }
 
 .title {
@@ -24,6 +36,11 @@
   font-weight: 500;
   line-height: 1.5rem;
   text-transform: uppercase;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+  }
 }
 
 .value {
@@ -32,6 +49,12 @@
   font-weight: 700;
   height: 2.75rem;
   line-height: 2.75rem;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 1.125rem;
+    line-height: 2.5rem;
+    height: 2.5rem;
+  }
 }
 
 .valueNumber {
@@ -39,6 +62,11 @@
   font-size: 2rem;
   font-weight: 800;
   line-height: 2.75rem;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 1.75rem;
+    line-height: 2.5rem;
+  }
 }
 
 .unit {
@@ -46,4 +74,9 @@
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.25rem;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
 }
