--- a/src/components/layout/web/Block.module.css
+++ b/src/components/layout/web/Block.module.css
@@ -1,5 +1,7 @@
 .block {
-  margin: 4rem auto 2rem auto;
+  margin: auto;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
 
   h2 {
     margin-bottom: 0;
@@ -8,6 +10,8 @@
 
 .description {
   color: var(--neutral-60);
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .header {
@@ -15,4 +19,10 @@
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 2rem;
+  gap: 0.75rem;
+
+  @media screen and (max-width: 48rem) {
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
