--- a/src/components/layout/web/Header.module.css
+++ b/src/components/layout/web/Header.module.css
@@ -4,13 +4,15 @@
 }
 
 .container {
+  width: calc(100% + 3rem);
   padding: 0.75rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 -1.25rem;
+  margin: 0 -1.5rem;
 
   @media screen and (max-width: 29.875rem) {
+    width: calc(100% + 1.5rem);
     margin: 0 -0.75rem;
     padding: 0.75rem 0;
   }
