--- a/src/utils/styles.css
+++ b/src/utils/styles.css
@@ -105,8 +105,6 @@
 
 html,
 body,
-div,
-span,
 applet,
 object,
 iframe,
@@ -145,6 +143,8 @@ var,
 b,
 u,
 i,
+input,
+button,
 center,
 dl,
 dt,
@@ -360,6 +360,7 @@ textarea {
 }
 
 .main-container {
+  width: 100%;
   max-width: 53rem;
   padding: 0 1.5rem;
   margin: auto;
