--- a/src/utils/styles.css
+++ b/src/utils/styles.css
@@ -270,15 +270,20 @@ h1 {
   color: var(--neutral-100);
   font-size: 2.5rem;
   line-height: 3.25rem;
-  margin-bottom: 1.5rem;
+  font-weight: 800;
+
+  @media screen and (max-width: 29.875rem) {
+    font-size: 2rem;
+    line-height: 2.75rem;
+  }
 }
 
 .title-h2,
 h2 {
+  font-weight: 700;
   color: var(--neutral-80);
   font-size: 2rem;
   line-height: 2.75rem;
-  margin-bottom: 1.25rem;
 }
 
 .title-h3,
