--- a/src/components/layout/web/Block.module.css
+++ b/src/components/layout/web/Block.module.css
@@ -1,11 +1,6 @@
 .block {
   margin: auto;
   padding-top: 4rem;
-  padding-bottom: 2rem;
-
-  h2 {
-    margin-bottom: 0;
-  }
 }
 
 .description {
@@ -18,11 +13,15 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  margin-bottom: 2rem;
   gap: 0.75rem;
 
   @media screen and (max-width: 48rem) {
     align-items: flex-start;
     flex-direction: column;
   }
+}
+
+.children {
+  margin-top: 2rem;
+  padding-bottom: 2rem;
 }
