--- a/src/components/misc/category/Share.module.css
+++ b/src/components/misc/category/Share.module.css
@@ -1,6 +1,4 @@
-import styled from 'styled-components'
-
-export const Meta = styled.div`
+.meta {
   align-items: center;
   border: 1px solid var(--neutral-20);
   border-radius: 4px;
@@ -9,7 +7,7 @@ export const Meta = styled.div`
   padding: 0.75rem;
   text-align: left;
 
-  img  {
+  img {
     max-height: 128px;
     width: auto;
   }
@@ -17,9 +15,9 @@ export const Meta = styled.div`
   p {
     margin-bottom: 0;
   }
-`
+}
 
-export const Buttons = styled.div`
+.buttons {
   display: flex;
   gap: 0.75rem;
   justify-content: center;
@@ -27,33 +25,33 @@ export const Buttons = styled.div`
 
   button {
     background-color: transparent !important;
-    border: 1px solid var(--secondary-20) !important;
+    border: 1px solid var(--primary-20) !important;
     border-radius: 4px;
-    color: var(--secondary-60) !important;
+    color: var(--primary-60) !important;
     cursor: pointer;
     line-height: 0 !important;
     padding: 0.875rem !important;
 
     &:hover {
-      background-color: var(--secondary-20) !important;
-      border: 1px solid var(--secondary-30) !important;
-      color: var(--secondary-70) !important;
+      background-color: var(--primary-20) !important;
+      border: 1px solid var(--primary-30) !important;
+      color: var(--primary-70) !important;
     }
 
     &:focus {
-      outline: 3px solid var(--secondary-40) !important;
+      outline: 3px solid var(--primary-40) !important;
       outline-offset: 2px !important;
     }
 
     &:active {
-      background-color: var(--secondary-30) !important;
-      color: var(--secondary-80) !important;
+      background-color: var(--primary-30) !important;
+      color: var(--primary-80) !important;
     }
 
     &:disabled {
       background-color: transparent !important;
-      border: 1px solid var(--secondary-20) !important;
-      color: var(--secondary-30) !important;
+      border: 1px solid var(--primary-20) !important;
+      color: var(--primary-30) !important;
       cursor: not-allowed !important;
     }
 
@@ -61,4 +59,4 @@ export const Buttons = styled.div`
       outline: none;
     }
   }
-`
+}
