--- a/src/components/misc/shareable/Actions.module.css
+++ b/src/components/misc/shareable/Actions.module.css
@@ -1,8 +1,6 @@
-import styled from 'styled-components'
-
-export const Buttons = styled.div`
+.buttons {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
   justify-content: center;
-`
+}
