--- a/src/components/home/EquivalentCard.module.css
+++ b/src/components/home/EquivalentCard.module.css
@@ -5,6 +5,24 @@
   border: 2px solid var(--neutral-20);
   background: var(--neutral-00);
   padding: 1.25rem 2rem;
+  text-decoration: none;
+
+  &:hover {
+    border-color: var(--primary-30);
+  }
+
+  &:active {
+    border-color: var(--neutral-30);
+  }
+
+  &:focus {
+    outline: 3px solid var(--primary-40);
+    outline-offset: 2px;
+  }
+
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 
   @media screen and (max-width: 29.875rem) {
     padding: 0.75rem 1rem;
