--- a/src/components/cards/ToolCard.module.css
+++ b/src/components/cards/ToolCard.module.css
@@ -1,8 +1,3 @@
-.arrow {
-  padding-left: 0.5rem;
-  transition: padding 0.3s ease-in-out;
-}
-
 .card {
   width: calc(100% / 3 - 0.5rem);
   display: flex;
@@ -19,11 +14,17 @@
   color: var(--neutral-50);
 
   &:hover {
-    border: 2px solid var(--primary-30);
+    border-color: var(--primary-30);
 
-    .arrow {
-      padding-left: 1rem;
+    .link {
+      svg {
+        padding-left: 1rem;
+      }
     }
+  }
+
+  &:active {
+    border-color: var(--neutral-30);
   }
 
   &:focus {
@@ -118,5 +119,11 @@
 
   @media screen and (max-width: 29.875rem) {
     margin-top: 0.25rem;
+  }
+
+  svg {
+    padding-left: 0.5rem;
+    transition: padding 0.3s ease-in-out;
+    width: fit-content;
   }
 }
