--- a/src/components/form/AddressInput.module.css
+++ b/src/components/form/AddressInput.module.css
@@ -1,32 +1,33 @@
-import styled, { keyframes } from 'styled-components'
-
-export const Container = styled.div`
+.container {
   position: relative;
-`
+}
 
-export const SuggestionsContainer = styled.div`
+.suggestionsContainer {
   position: absolute;
   width: 100%;
   z-index: 2;
-`
+}
 
-const loading = keyframes`
+@keyframes loading {
   from {
     transform: rotate(0deg);
   }
+
   15% {
     transform: rotate(0deg);
   }
+
   85% {
-    transform: rotate(360deg);    
+    transform: rotate(360deg);
   }
+
   to {
     transform: rotate(360deg);
   }
-`
+}
 
-export const Loading = styled.div`
-  animation: ${loading} 1.3s infinite;
+.loading {
+  animation: loading 1.3s infinite;
   bottom: 10px;
   color: var(--secondary-50);
   height: 1.25rem;
@@ -38,4 +39,4 @@ export const Loading = styled.div`
     height: 1.25rem;
     width: 1.25rem;
   }
-`
+}
