--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -30,6 +30,19 @@
   }
 }
 
+.inputError {
+  border: 2px solid var(--critical-30);
+
+  &:hover {
+    border: 2px solid var(--critical-40);
+  }
+
+  &:focus {
+    border: 2px solid var(--critical-50);
+    outline: 4px solid var(--critical-30);
+  }
+}
+
 .withIcon {
   padding-right: 3.25rem;
 }
@@ -56,4 +69,65 @@
     width: 1.25rem;
     height: 1.25rem;
   }
+}
+
+.container {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.label {
+  color: var(--neutral-80);
+  display: inline-block;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+
+.labelError {
+  color: var(--critical-50);
+}
+
+.hint {
+  color: var(--neutral-60);
+  font-weight: 400;
+}
+
+.notRequired {
+  color: var(--neutral-50);
+  font-weight: 400;
+  display: inline;
+}
+
+.starsButtons {
+  align-items: center;
+  display: flex;
+  margin: 0 -0.25rem;
+
+  button {
+    background-color: transparent;
+    border: none;
+    border-radius: 2px;
+    color: var(--primary-50);
+    cursor: pointer;
+    padding: 0;
+    padding: 0.25rem;
+
+    &:focus {
+      outline: 3px solid var(--primary-50);
+      outline-offset: -2px;
+    }
+
+    &:focus:not(:focus-visible) {
+      outline: none;
+    }
+  }
+}
+
+.error {
+  align-items: center;
+  color: var(--critical-50);
+  display: flex;
+  gap: 0.25rem;
+  margin-top: 0.5rem;
 }
