--- a/src/components/misc/category/CustomParam.module.css
+++ b/src/components/misc/category/CustomParam.module.css
@@ -1,42 +1,34 @@
-import styled from 'styled-components'
-import Input from 'components/form/Input'
-
-export const Title = styled.div`
+.title {
   color: var(--neutral-80);
   font-weight: 500;
   margin-bottom: 0.5rem;
-`
+}
 
-export const Container = styled.div`
+.container {
   align-items: center;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem 2rem;
   justify-content: space-between;
   margin-bottom: 2rem;
-`
+}
 
-export const InputContainer = styled.div<{ $fullWidth?: boolean }>`
+.inputContainer {
   position: relative;
-  ${({ $fullWidth }) => $fullWidth && 'width: 100%;'}
-`
+}
 
-export const StyledInput = styled(Input)`
-  input {
-    padding: 0.5rem 3rem 0.5rem 1rem;
-    text-align: right;
-  }
-`
+.fullWidth {
+  width: 100%;
+}
 
-export const InputSuffix = styled.span<{ $disabled: boolean }>`
+.inputSuffix {
   color: var(--neutral-50);
   position: absolute;
   right: 1rem;
   top: 0.5rem;
-  ${({ $disabled }) => $disabled && 'color: var(--neutral-30);'}
-`
+}
 
-export const Inputs = styled.div`
+.inputs {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem 2rem;
@@ -47,14 +39,14 @@ export const Inputs = styled.div`
     flex: 1;
     min-width: 300px;
   }
-`
+}
 
-export const Params = styled.div`
+.params {
   display: flex;
   gap: 0.25rem;
-`
+}
 
-export const Param = styled.div`
+.param {
   align-items: center;
   background: var(--neutral-10);
   border: 1px solid var(--neutral-20);
@@ -64,4 +56,4 @@ export const Param = styled.div`
   font-weight: 500;
   gap: 0.5rem;
   padding: 0.25rem 0.5rem;
-`
+}
