--- a/src/components/misc/category/Share.module.css
+++ b/src/components/misc/category/Share.module.css
@@ -3,20 +3,43 @@
   border: 1px solid var(--neutral-20);
   border-radius: 4px;
   display: flex;
-  gap: 0.75rem;
+  gap: 1rem 0.75rem;
   margin-top: 2rem;
   padding: 0.75rem;
   text-align: left;
   margin-top: 2rem;
 
   img {
-    max-height: 128px;
+    max-height: 8rem;
     width: auto;
   }
 
   p {
     margin-bottom: 0;
   }
+
+  @media only screen and (max-width: 48rem) {
+    img {
+      max-height: 4rem;
+    }
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    flex-direction: column;
+
+    img {
+      width: 100%;
+      height: auto;
+      max-height: unset;
+    }
+  }
+}
+
+.metaHeader {
+  color: var(--primary-50);
+  font-size: 0.75rem;
+  line-height: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .buttons {
@@ -27,32 +50,39 @@
 
   button {
     background-color: transparent !important;
-    border: 1px solid var(--primary-20) !important;
-    border-radius: 4px;
-    color: var(--primary-60) !important;
+    border: 2px solid var(--primary-30) !important;
+    border-radius: 50%;
+    color: var(--primary-50) !important;
     cursor: pointer;
     line-height: 0 !important;
-    padding: 0.875rem !important;
+    width: 2.5rem;
+    height: 2.5rem;
+
+    svg {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
 
     &:hover {
-      background-color: var(--primary-20) !important;
-      border: 1px solid var(--primary-30) !important;
-      color: var(--primary-70) !important;
+      background-color: var(--primary-10) !important;
+      border: 2px solid var(--primary-40) !important;
+      color: var(--primary-60) !important;
     }
 
     &:focus {
-      outline: 3px solid var(--primary-40) !important;
+      outline: 3px solid var(--primary-50) !important;
       outline-offset: 2px !important;
     }
 
     &:active {
-      background-color: var(--primary-30) !important;
-      color: var(--primary-80) !important;
+      background-color: var(--primary-20) !important;
+      border: 2px solid var(--primary-50) !important;
+      color: var(--primary-70) !important;
     }
 
     &:disabled {
       background-color: transparent !important;
-      border: 1px solid var(--primary-20) !important;
+      border: 2px solid var(--primary-20) !important;
       color: var(--primary-30) !important;
       cursor: not-allowed !important;
     }
