--- a/src/components/misc/shareable/Shareable.module.css
+++ b/src/components/misc/shareable/Shareable.module.css
@@ -28,10 +28,15 @@
   justify-content: center;
 }
 
-.separator {
+.separator,
+.separatorBothBorders {
   height: 0.75rem;
   background: var(--primary-10);
   border-top: 2px solid var(--primary-30);
+}
+
+.separatorBothBorders {
+  border-bottom: 2px solid var(--primary-30);
 }
 
 .logos {
@@ -56,9 +61,9 @@
   height: 100%;
   width: 100%;
   z-index: 1;
-  background-color: var(--neutral-10);
+  background-color: var(--primary-80);
   flex: 1;
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 .overScreen {
@@ -67,29 +72,63 @@
   z-index: 2;
   background-color: var(--neutral-00);
   max-height: 64%;
-  border-radius: 0 0 calc(1rem - 2px) calc(1rem - 2px);
+  border-radius: calc(1rem - 2px);
   width: 100%;
-  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  @media screen and (max-width: 29.875rem) {
+    max-height: 100%;
+    height: 100%;
+  }
 }
 
 .header {
   align-items: center;
-  border-bottom: 1px solid var(--neutral-20);
-  border-radius: 1rem 1rem 0 0;
   display: flex;
   justify-content: space-between;
-  padding: 1rem 1.5rem;
+  padding: 0.75rem 1.5rem;
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 0.75rem 1rem;
+  }
 }
 
 .overScreenChildren {
   padding: 2rem 1.5rem;
+  flex-shrink: 1;
+  overflow: auto;
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 2rem 1rem;
+  }
 }
 
 .footer {
-  border-top: 1px solid var(--neutral-20);
-  padding: 1rem 1.5rem;
+  padding: 0.875rem 1.5rem;
 
   button {
     margin: auto;
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 0.875rem 1rem;
+  }
+}
+
+.ressources {
+  padding: 1.5rem;
+  background: var(--primary-10);
+  border-top: 2px solid var(--primary-30);
+  display: flex;
+  gap: 0.75rem;
+
+  @media screen and (max-width: 48rem) {
+    flex-wrap: wrap;
+  }
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 1.5rem 1rem;
   }
 }
