--- a/src/components/form/Input.module.css
+++ b/src/components/form/Input.module.css
@@ -84,6 +84,11 @@
   padding: 0.5rem 1rem;
 }
 
+.large {
+  padding-top: calc(1rem - 2px);
+  padding-bottom: calc(1rem - 2px);
+}
+
 .inputContainer {
   position: relative;
 }
