--- a/src/components/outils/Simulator.module.css
+++ b/src/components/outils/Simulator.module.css
@@ -6,12 +6,17 @@
   flex-direction: column;
   align-items: center;
 
+  select,
   input {
     color: var(--neutral-80);
     font-size: 1.75rem;
     font-weight: 800;
     line-height: 2rem;
     padding: 0.5rem 1rem;
+  }
+
+  select {
+    padding-right: 2rem;
   }
 
   @media screen and (max-width: 29.875rem) {
