--- a/src/components/misc/shareable/Shareable.module.css
+++ b/src/components/misc/shareable/Shareable.module.css
@@ -47,8 +47,12 @@
 }
 
 .actions {
-  padding: 0.75rem 1.5rem;
+  padding: 0.875rem 1.5rem 0.75rem 1.5rem;
   border-top: 2px solid var(--primary-30);
+
+  @media screen and (max-width: 29.875rem) {
+    padding: 0.875rem 1rem 0.75rem 1rem;
+  }
 }
 
 .secondaryActions {
@@ -106,14 +110,14 @@
 }
 
 .footer {
-  padding: 0.875rem 1.5rem;
+  padding: 0.875rem 1.5rem 0.75rem 1.5rem;
 
   button {
     margin: auto;
   }
 
   @media screen and (max-width: 29.875rem) {
-    padding: 0.875rem 1rem;
+    padding: 0.875rem 1rem 0.75rem 1rem;
   }
 }
 
