--- a/src/components/form/AddressInput.module.css
+++ b/src/components/form/AddressInput.module.css
@@ -40,3 +40,14 @@
     width: 1.25rem;
   }
 }
+
+.largeLoading {
+  bottom: 1rem;
+}
+
+.largeLabel {
+  color: var(--neutral-80);
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+}
