--- a/src/components/misc/category/overScreens/Data.module.css
+++ b/src/components/misc/category/overScreens/Data.module.css
@@ -1,12 +1,10 @@
-import styled from 'styled-components'
-
-export const Container = styled.div`
+.container {
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
-`
+}
 
-export const StyledEmoji = styled.div`
+.emoji {
   background-color: var(--primary-10);
   border-radius: 50%;
   display: inline-block;
@@ -14,29 +12,52 @@ export const StyledEmoji = styled.div`
   line-height: 1;
   margin-right: 0.5rem;
   padding: 0.5rem;
-`
+}
 
-export const Text = styled.div`
+.text {
   padding: 0.75rem 0;
-`
+}
 
-export const Values = styled.div<{ $withBorder: boolean }>`
+.values {
   align-items: center;
-  ${({ $withBorder }) => $withBorder && 'border-bottom: 1px solid var(--neutral-20);'}
   display: flex;
   gap: 1rem;
   justify-content: space-between;
   padding: 1.25rem 0;
-`
+}
 
-export const Value = styled.div`
+.border {
+  border-bottom: 1px solid var(--neutral-20);
+}
+
+.value {
   background: var(--neutral-10);
   border: 1px solid var(--neutral-20);
   border-radius: 4px;
   padding: 0.25rem 0.5rem;
-`
+}
 
-export const Hypothesis = styled.div`
+.hypothesis {
   color: var(--neutral-50);
   padding: 0.5rem 0 0.75rem 0;
-`
+}
+
+.title {
+  color: var(--neutral-70);
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 2rem;
+  margin-bottom: 0.75rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  color: var(--neutral-50);
+  margin-bottom: 2rem;
+
+  ul {
+    margin-left: 1.5rem;
+  }
+}
