--- a/src/components/form/CheckboxInput.module.css
+++ b/src/components/form/CheckboxInput.module.css
@@ -17,48 +17,34 @@
   position: relative;
   text-align: left;
 
-  input[type='radio'] {
+  input[type='checkbox'] {
     -webkit-appearance: none;
     appearance: none;
 
     border: 2px solid var(--primary-50);
-    border-radius: 50%;
+    border-radius: 0.5rem;
     cursor: pointer;
     height: 1.75rem;
     width: 1.75rem;
   }
 
-  input[type='radio']:checked {
-    background-color: var(--primary-30);
-
-    &:before {
-      display: inline-block;
-      border-radius: 50%;
-      content: '';
-      margin: calc(0.125rem + 2px) 0 0 calc(0.125rem + 2px);
-      width: 1rem;
-      height: 1rem;
-      background-color: var(--primary-50);
-    }
+  input[type='checkbox']:checked {
+    background-color: var(--primary-40);
   }
 
   &:hover {
     color: var(--neutral-70);
 
-    input[type='radio'] {
+    input[type='checkbox'] {
       border-color: var(--primary-70);
     }
 
-    input[type='radio']:checked {
-      border-color: var(--primary-70);
-
-      &:before {
-        background-color: var(--primary-70);
-      }
+    input[type='checkbox']:checked {
+      background-color: var(--primary-50);
     }
   }
 
-  input[type='radio']:focus {
+  input[type='checkbox']:focus {
     outline: 4px solid var(--primary-30);
     outline-offset: 0;
   }
@@ -70,4 +56,11 @@
   &:hover {
     color: var(--neutral-80);
   }
+}
+
+.check {
+  color: var(--neutral-00);
+  left: 0.5rem;
+  padding: inherit;
+  position: absolute;
 }
