--- a/src/components/comparateur/overscreens/Checkbox.module.css
+++ b/src/components/comparateur/overscreens/Checkbox.module.css
@@ -6,6 +6,10 @@
   border: none;
   border-radius: 8px;
 
+  label {
+    width: 100%;
+  }
+
   &:hover {
     background-color: var(--primary-10);
   }
@@ -30,6 +34,7 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
+  flex-grow: 1;
 }
 
 .equivalentName {
