--- a/src/components/misc/shareable/Shareable.module.css
+++ b/src/components/misc/shareable/Shareable.module.css
@@ -13,7 +13,9 @@
 .secondaryContainer {
   border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
+  gap: 1.5rem;
   justify-content: center;
   width: 100%;
   height: 100%;
@@ -21,11 +23,18 @@
   background-color: var(--neutral-10);
 }
 
+.secondaryText {
+  color: var(--neutral-60);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .secondaryContent {
   flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .separator,
@@ -70,6 +79,10 @@
   opacity: 0.85;
 }
 
+.noBorder {
+  border-radius: 1rem;
+}
+
 .overScreen {
   position: absolute;
   bottom: 0;
@@ -86,6 +99,11 @@
     max-height: 100%;
     height: 100%;
   }
+}
+
+.fullHeight {
+  height: 100%;
+  max-height: 100%;
 }
 
 .header {
@@ -107,6 +125,13 @@
   @media screen and (max-width: 29.875rem) {
     padding: 2rem 1rem;
   }
+}
+
+.noScroll {
+  overflow: unset;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .footer {
