--- a/src/components/outils/ItineraireSimulator.module.css
+++ b/src/components/outils/ItineraireSimulator.module.css
@@ -1,3 +1,4 @@
+.days,
 .addresses {
   display: flex;
   gap: 0.75rem;
@@ -11,8 +12,33 @@
     }
   }
 
+  label {
+    display: inline-block;
+    color: var(--neutral-80);
+    font-weight: 400;
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+
   @media only screen and (max-width: 48rem) {
     flex-direction: column;
+  }
+}
+
+.addresses {
+  label {
+    font-weight: 700;
+  }
+}
+
+.days {
+  input {
+    color: var(--neutral-80);
+    font-size: 1.75rem;
+    font-weight: 800;
+    line-height: 2rem;
+    padding: 0.5rem 1rem;
   }
 }
 
