--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -6,6 +6,10 @@
   background-color: var(--neutral-00);
 }
 
+.smallCard {
+  max-width: 30rem;
+}
+
 .secondaryCard {
   border-color: var(--neutral-10);
 }
@@ -151,6 +155,7 @@
   background: var(--primary-10);
   border-top: 2px solid var(--primary-30);
   display: flex;
+  flex-wrap: wrap;
   gap: 0.75rem;
 
   @media screen and (max-width: 48rem) {
