--- a/src/components/outils/TransportSimulator.module.css
+++ b/src/components/outils/TransportSimulator.module.css
@@ -1,7 +1,6 @@
 .tabs {
   display: flex;
   border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
-  border-bottom: 2px solid var(--primary-30);
   background: var(--primary-10);
 }
 
@@ -12,6 +11,7 @@
   color: var(--primary-60);
   font-weight: 500;
   background-color: transparent;
+  border-bottom: 2px solid var(--primary-30);
 
   &:first-child {
     border-radius: calc(1rem - 2px) 0 0 0;
@@ -27,6 +27,7 @@
   background: var(--neutral-00);
   margin-top: -2px;
   border-top: 2px solid var(--primary-30);
+  border-bottom: none;
 
   &:first-child {
     border-radius: calc(1rem - 2px) calc(1rem - 2px) 0 0;
