--- a/src/components/outils/osezChanger/Question.module.css
+++ b/src/components/outils/osezChanger/Question.module.css
@@ -7,7 +7,8 @@
     font-weight: 700;
     font-size: 1.125rem;
     line-height: 1.5rem;
-    margin-bottom: 0.5rem;
+    flex: 1;
+    min-width: 300px;
   }
 }
 
@@ -16,6 +17,9 @@
   gap: 0.5rem;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .tag {
