--- a/src/components/shareable/Shareable.module.css
+++ b/src/components/shareable/Shareable.module.css
@@ -101,7 +101,6 @@
 
   @media screen and (max-width: 29.875rem) {
     max-height: 100%;
-    height: 100%;
   }
 }
 
@@ -128,6 +127,7 @@
 
   @media screen and (max-width: 29.875rem) {
     padding: 2rem 1rem;
+    flex: 1;
   }
 }
 
