--- a/src/components/externalModules/Logo.module.css
+++ b/src/components/externalModules/Logo.module.css
@@ -3,7 +3,7 @@
   width: fit-content !important;
   display: flex !important;
   align-items: center !important;
-  padding: 0 0.75rem !important;
+  padding: 0 0.875rem 0 0.75rem !important;
   height: auto !important;
   color: var(--primary-50) !important;
   background-color: var(--primary-10) !important;
@@ -35,11 +35,11 @@
 }
 
 .logo {
-  border-right: 1px solid var(--primary-20) !important;
+  border-right: 2px solid var(--primary-30) !important;
   border-radius: 8px 0 0 8px !important;
 }
 
 .reverseLogo {
-  border-left: 1px solid var(--primary-20) !important;
+  border-left: 2px solid var(--primary-30) !important;
   border-radius: 0 8px 8px 0 !important;
 }
