--- a/src/components/externalModules/detection/Detector.module.css
+++ b/src/components/externalModules/detection/Detector.module.css
@@ -11,7 +11,7 @@
   width: max-content !important;
   height: fit-content !important;
   padding: 0 2em 0 0 !important;
-  border: 1px solid var(--neutral-30) !important;
+  border: 2px solid var(--primary-30) !important;
   background-color: var(--neutral-00) !important;
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06) !important;
   border-radius: 8px !important;
