--- a/src/components/externalModules/shopify/ColumnEquivalent.module.css
+++ b/src/components/externalModules/shopify/ColumnEquivalent.module.css
@@ -1,6 +1,6 @@
 .container {
   border-radius: 8px;
-  border: 1px solid var(--neutral-30);
+  border: 2px solid var(--primary-30);
   box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06) !important;
 }
 
@@ -13,6 +13,6 @@
   padding: 0.75rem;
 
   &:not(:last-child) {
-    border-bottom: solid 1px var(--neutral-30);
+    border-bottom: 2px solid var(--primary-30);
   }
 }
