--- a/src/components/examples/Tag.module.css
+++ b/src/components/examples/Tag.module.css
@@ -8,4 +8,19 @@
   font-size: 0.875rem;
   font-weight: 500;
   line-height: 1.25rem;
+
+  &:hover {
+    border: 2px solid var(--primary-40);
+    background: var(--primary-20);
+    color: var(--primary-70);
+  }
+
+  &:focus {
+    outline: 3px solid var(--primary-40);
+    outline-offset: 2px;
+  }
+
+  &:focus:not(:focus-visible) {
+    outline: none;
+  }
 }
